[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-spend-ledger"
version = "0.1.0"
description = "Offline Steam purchase history summarizer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EuDs63" }]

[project.scripts]
steam-spend-ledger = "steam_spend_ledger:main"

[tool.pytest.ini_options]
pythonpath = ["."]

